# super-order-platform

./: .gitignore  PRD.md  README.md  docker-compose.yml  开发计划.md
backend/: Dockerfile  main.py  requirements.txt
backend/app/core/: config.py
backup/desktop/: package.json
backup/desktop/renderer/: index.html  main.js  tauri-api.js
backup/desktop/renderer/router/: index.js
backup/desktop/renderer/views/: Home.vue  Orders.vue  SKU.vue
backup/desktop/src/: commands.rs  main.rs
clould/app/core/: aliyun_oss.py  config.py
desktop/: README.md  TAURI_README.md  package-lock.json  package.json  vite.config.js  vite.config.ts
desktop/data/: super_order.db
desktop/src-tauri/: Cargo.toml  create_icon.py  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  db.rs  main.rs
desktop/src-tauri/src/commands/: category.rs  common.rs  customer.rs  financial.rs  mod.rs  order.rs  purchase.rs  sku.rs
desktop/src-tauri/src/db/: category.rs  customer.rs  db_path.rs  financial_transaction.rs  mod.rs  models.rs  order.rs  order_item.rs  sku.rs
desktop/src/renderer/: App.vue  electron-mock.js  index.html  main.js  tauri-api.js  test-tauri.html
desktop/src/renderer/composables/: useFinancialTransaction.js  useOrderForm.js  usePurchaseExport.js  usePurchaseForm.js  usePurchaseList.js  useSKUForm.js  useSKUImage.js  useSettlementExport.js  useSettlementList.js
docker/: .env.example  init.sql
scripts/: config.py  import_orders.py  import_sku.py  init_db.py  minio_client.py  requirements.txt  setup_minio_policy.py
(+8 files in other folders)
